# ninja-multiconfig-vcpkg

./: CMakeLists.txt  CMakePresets.json  bootstrapenv.bat  main.cpp  vcpkg.json
